abbreviated labels for long publication type names

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1671,6 +1671,8 @@ adv_search_lblChkGenre_bookitem = Buchkapitel
 
 adv_search_lblChkGenre_casenote = Entscheidungsanmerkung
 
+adv_search_lblChkGenre_abb_casenote = Entscheidungs...
+
 adv_search_lblChkGenre_casestudy = Fallbesprechung 
 
 adv_search_lblChkGenre_colled = Sammelwerk
@@ -1683,11 +1685,19 @@ adv_search_lblChkGenre_conferencerep = Konferenzbericht
 
 adv_search_lblChkGenre_contrcolled =  Beitrag in Sammelwerk 
 
+adv_search_lblChkGenre_abb_contrcolled =  Beitrag in Sammel... 
+
 adv_search_lblChkGenre_contrcommentary = Beitrag in Kommentar 
+
+adv_search_lblChkGenre_abb_contrcommentary = Beitrag in Komm...
 
 adv_search_lblChkGenre_contrlexikon = Beitrag in Lexikon 
 
+adv_search_lblChkGenre_abb_contrlexikon = Beitrag in Lexikon 
+
 adv_search_lblChkGenre_contrfestschrift = Beitrag in Festschrift 
+
+adv_search_lblChkGenre_abb_contrfestschrift = Beitrag in Fest...
 
 adv_search_lblChkGenre_contrhandbook = Beitrag in Handbuch 
 
