--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1670,6 +1670,8 @@ adv_search_lblChkGenre_bookitem = Book Chapter
 
 adv_search_lblChkGenre_casenote = Case Note
 
+adv_search_lblChkGenre_abb_casenote = Case Note
+
 adv_search_lblChkGenre_casestudy = Case Study
 
 adv_search_lblChkGenre_colled = Collected Edition
@@ -1680,15 +1682,23 @@ adv_search_lblChkGenre_conferencepap = Conference Paper
 
 adv_search_lblChkGenre_conferencerep = Conference Report
 
-adv_search_lblChkGenre_contrcolled =  Contribution to a Collected Edition 
+adv_search_lblChkGenre_contrcolled =  Contr. to Collected Edition 
 
-adv_search_lblChkGenre_contrcommentary = Contribution to a Commentary 
+adv_search_lblChkGenre_abb_contrcolled =  Contr. to Collect...
 
-adv_search_lblChkGenre_contrlexikon = Contribution to an Encyclopedia 
+adv_search_lblChkGenre_contrcommentary = Contr. to Commentary 
 
-adv_search_lblChkGenre_contrfestschrift = Contribution to a Festschrift 
+adv_search_lblChkGenre_abb_contrcommentary = Contr. to Comment...
 
-adv_search_lblChkGenre_contrhandbook = Contribution to a Handbook 
+adv_search_lblChkGenre_contrlexikon = Contr. to Encyclopedia 
+
+adv_search_lblChkGenre_abb_contrlexikon = Contr. to Encycl...
+
+adv_search_lblChkGenre_contrfestschrift = Contr. to Festschrift 
+
+adv_search_lblChkGenre_abb_contrfestschrift = Contr. to Fest...
+
+adv_search_lblChkGenre_contrhandbook = Contr. to Handbook 
 
 adv_search_lblChkGenre_courseware = Teaching
 
