--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1647,6 +1647,8 @@ adv_search_lblChkGenre_bookreview = Book Review
 
 adv_search_lblChkGenre_casenote = Case Note
 
+adv_search_lblChkGenre_abb_casenote = Case Note
+
 adv_search_lblChkGenre_casestudy = Case Study
 
 adv_search_lblChkGenre_colled = Collected Edition
@@ -1659,11 +1661,19 @@ adv_search_lblChkGenre_conferencerep = \u4F1A\u8B70\u5831\u544A
 
 adv_search_lblChkGenre_contrcolled =  Contribution to a Collected Edition 
 
+adv_search_lblChkGenre_abb_contrcolled =  Contr. to Collect...
+
 adv_search_lblChkGenre_contrcommentary = Contribution to a Commentary 
+
+adv_search_lblChkGenre_abb_contrcommentary = Contr. to Comment...
 
 adv_search_lblChkGenre_contrlexikon = Contribution to an Encyclopedia 
 
+adv_search_lblChkGenre_abb_contrlexikon = Contr. to Encycl...
+
 adv_search_lblChkGenre_contrfestschrift = Contribution to a Festschrift
+
+adv_search_lblChkGenre_abb_contrfestschrift = Contr. to Fest...
 
 adv_search_lblChkGenre_contrhandbook = Contribution to a Handbook 
 
