added proposals from pubman wording page

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -105,7 +105,7 @@ AudiencePage_numberOf = insgesamt
 
 AudiencePage_numberOfFiles = Dateien:
 
-Basket_lblRemoveSelected = AUS BASKET ENTFERNEN
+Basket_lblRemoveSelected = AUS ABLAGE ENTFERNEN
 
 #
 # Bread Crumb Navigation
@@ -116,19 +116,21 @@ BrowseByChooseInitial = W\u00E4hle Anfangsbuchstabe
 
 BrowseByChooseYear = W\u00E4hle Jahr
 
-BrowseByCreator = Browse By Urheber
+BrowseByCreator = Personen
 
-BrowseByCreatorDesc = Browse by creator names and view the corresponding items.
+BrowseByCreatorDesc = Browse by person names and view the corresponding items.
 
 BrowseByInitial = Anfangsbuchstabe:
 
+BrowseByOrg = Organisationen
+
 BrowseByOrgDesc = Browse by organizational unit names and view the corresponding items.
 
-BrowseByPage = Browse By
+BrowseByPage = Browse
 
 BrowseBySelect = W\u00E4hle Browse By
 
-BrowseBySubject = Jahr
+BrowseBySubject = Schlagw\u00F6rter
 
 BrowseByYear = Browse By Jahr
 
@@ -137,7 +139,7 @@ BrowseByYearDesc = Browse by year and view the corresponding items.
 #
 #CartItemsPage
 #
-CartItemsPage = Basket
+CartItemsPage = Ablage
 
 CollaboratorPage = Collaborator
 
@@ -346,6 +348,8 @@ ENUM_GENRE_ISSUE = Sonderheft
 
 ENUM_GENRE_JOURNAL = Zeitschrift
 
+ENUM_GENRE_MANUAL = Leitfaden
+
 ENUM_GENRE_MANUSCRIPT = Manuskript
 
 #
@@ -379,6 +383,10 @@ ENUM_GENRE_SERIES = Reihe
 ENUM_GENRE_TALK_AT_EVENT = Vortrag
 
 ENUM_GENRE_THESIS = Hochschulschrift
+
+ENUM_GENRE_WEB_PAGE = Webseite 
+
+ENUM_GENRE_WORKING_PAPER = Arbeitspapier 
 
 ENUM_IDENTIFIERTYPE_ = n.a.
 
@@ -567,6 +575,10 @@ EditItem_btUpload = hochladen
 
 EditItem_btUploadLocator = verlinkte Datei hochladen
 
+EditItem_btUpload_File = Datei hochladen
+
+EditItem_btUpload_URL = Von URL hochladen
+
 EditItem_btnAddAuthors = Hinzuf\u00FCgen
 
 EditItem_btnAddAuthorsOverwrite = alte \u00FCberschreiben
@@ -637,6 +649,8 @@ EditItem_lblFileEmbargo = Embargo bis
 
 EditItem_lblFileProperties = Eigenschaften
 
+EditItem_lblFileURL = Datei URL
+
 EditItem_lblGenre = Genre
 
 EditItem_lblIssue = Heftnummer
@@ -703,9 +717,11 @@ EditItem_lnkSave = Speichern
 
 EditItem_lnkSaveAndSubmit = Einstellen
 
+EditItem_lnkSaveURL = URL Speichern
+
 EditItem_lnkValidate = Validierung
 
-EditItem_localPath = Pfad auf Ihrem Computer
+EditItem_localPath = Lokaler Datei Pfad
 
 ErrorPage = Fehler
 
@@ -773,7 +789,7 @@ Feed_Recent_Releases = Neu PubMan Eintr\u00E4ge
 #
 # Orientierungstexts (Sub-Header)
 #
-HomePage = Startseite
+HomePage = Start
 
 Home_Header_About = \u00DCber PubMan
 
@@ -829,11 +845,11 @@ List_SelectItem = Selektieren
 
 List_ShortView = Kurzansicht (alle Datens\u00E4tze)
 
-List_lblAddToBasket = ZUM BASKET HINZUF\u00DCGEN
+List_lblAddToBasket = ZUR ABLAGE HINZUF\u00DCGEN
 
 List_lblBibList = Bibliographisch
 
-List_lblExportAllOptions = BASKET EXPORT
+List_lblExportAllOptions = EXPORT ABLAGE
 
 List_lblExportOptions = EXPORT
 
@@ -879,7 +895,7 @@ LoginErrorPage = Login Status
 
 MultipleImportForm = Importparameter
 
-NewMultipleImport = Massenimport
+NewMultipleImport = Import
 
 NoSearchResultListPage = keine Treffer
 
@@ -976,17 +992,19 @@ SubmitItem_lnkSubmit = Einstellen
 
 ViewItemFull_btnFileSection = Dateien
 
-ViewItemFull_btnItemRevisions = Revisionen des Datensatzes
+ViewItemFull_btnItemRevisions = Revisionen
 
 ViewItemFull_btnItemStatistics = Statistiken
 
 ViewItemFull_btnItemVersions = Freigabegeschichte
 
+ViewItemFull_btnItemView = Ansehen
+
 ViewItemFull_lblAbstract = Zusammenfassung
 
 ViewItemFull_lblAbstractLanguage = Sprache des Abstracts
 
-ViewItemFull_lblAddToBasket = Zum Basket hinzuf\u00FCgen
+ViewItemFull_lblAddToBasket = Zur Ablage hinzuf\u00FCgen
 
 ViewItemFull_lblAffiliations = Affiliations
 
@@ -1118,7 +1136,7 @@ ViewItemFull_lblRelation = Relation
 
 ViewItemFull_lblReleased = , freigegeben
 
-ViewItemFull_lblRemoveFromBasket = Aus dem Basket entfernen
+ViewItemFull_lblRemoveFromBasket = Aus Ablage entfernen
 
 ViewItemFull_lblRevisionMethod = Art der Begutachtung
 
@@ -1301,7 +1319,7 @@ ViewItemMedium_lblSubHeaderFile = Dateien
 
 ViewItemMedium_lblSubHeaderSource = Quellen
 
-ViewItemPage = Datensatz ansehen
+ViewItemPage = Datensatz
 
 ViewItemReleaseHistoryPage = Freigaben ansehen
 
@@ -1324,7 +1342,7 @@ ViewItemReleaseHistory_lblReleaseHistory = Freigabegeschichte
 
 ViewItemReleaseHistory_lblVersion = Version
 
-ViewItemRevisionsPage = Revisionen ansehen
+ViewItemRevisionsPage = Revisionen
 
 #
 # ViewItem Revisions
@@ -1409,7 +1427,7 @@ ViewItem_lblCreator1 = Urheber:
 
 ViewItem_lblDateAccepted = Akzeptiert
 
-ViewItem_lblDateAccepted1 = Akzeptierungsdatum:
+ViewItem_lblDateAccepted1 = Annahmedatum:
 
 ViewItem_lblDateCreated = Erstellt
 
@@ -1585,7 +1603,7 @@ actionMenu_lnkEditLocalTags = Lokale Tags bearbeiten
 
 actionMenu_lnkModify = \u00C4ndern
 
-actionMenu_lnkNewSubmission = Detaillierte Eingabe
+actionMenu_lnkNewSubmission = Detailliert
 
 actionMenu_lnkRelease = Freigeben
 
@@ -1661,17 +1679,25 @@ adv_search_lbHeaderWoP = Wort oder Ausdruck
 #Genre (deprecated)
 adv_search_lblChkGenre = Genres
 
+adv_search_lblChkGenre_abb_casenote = Entscheidungs...
+
+adv_search_lblChkGenre_abb_contrcolled = Beitrag in Sammel... 
+
+adv_search_lblChkGenre_abb_contrcommentary = Beitrag in Komm...
+
+adv_search_lblChkGenre_abb_contrfestschrift = Beitrag in Fest...
+
+adv_search_lblChkGenre_abb_contrlexikon = Beitrag in Lexikon 
+
 adv_search_lblChkGenre_article = Zeitschriftenartikel
 
 adv_search_lblChkGenre_book = Buch
 
-adv_search_lblChkGenre_bookreview = Rezension
-
 adv_search_lblChkGenre_bookitem = Buchkapitel
 
-adv_search_lblChkGenre_casenote = Entscheidungsanmerkung
+adv_search_lblChkGenre_bookreview = Rezension
 
-adv_search_lblChkGenre_abb_casenote = Entscheidungs...
+adv_search_lblChkGenre_casenote = Entscheidungsanmerkung
 
 adv_search_lblChkGenre_casestudy = Fallbesprechung 
 
@@ -1683,23 +1709,15 @@ adv_search_lblChkGenre_conferencepap = Konferenzbeitrag
 
 adv_search_lblChkGenre_conferencerep = Konferenzbericht
 
-adv_search_lblChkGenre_contrcolled =  Beitrag in Sammelwerk 
-
-adv_search_lblChkGenre_abb_contrcolled =  Beitrag in Sammel... 
+adv_search_lblChkGenre_contrcolled = Beitrag in Sammelwerk 
 
 adv_search_lblChkGenre_contrcommentary = Beitrag in Kommentar 
 
-adv_search_lblChkGenre_abb_contrcommentary = Beitrag in Komm...
-
-adv_search_lblChkGenre_contrlexikon = Beitrag in Lexikon 
-
-adv_search_lblChkGenre_abb_contrlexikon = Beitrag in Lexikon 
-
 adv_search_lblChkGenre_contrfestschrift = Beitrag in Festschrift 
 
-adv_search_lblChkGenre_abb_contrfestschrift = Beitrag in Fest...
-
 adv_search_lblChkGenre_contrhandbook = Beitrag in Handbuch 
+
+adv_search_lblChkGenre_contrlexikon = Beitrag in Lexikon 
 
 adv_search_lblChkGenre_courseware = Lehrmaterial
 
@@ -1734,7 +1752,6 @@ adv_search_lblChkGenre_series = Reihe
 adv_search_lblChkGenre_talkatevent = Vortrag
 
 adv_search_lblChkGenre_thesis = Hochschulschrift
-
 
 adv_search_lblChkInclude = Files einbinden
 
@@ -1923,7 +1940,7 @@ easy_submission_lblCreator = Urheber
 
 easy_submission_lblDate = Datum
 
-easy_submission_lblDateAccepted = Akzeptierungsdatum
+easy_submission_lblDateAccepted = Annahmedatum
 
 easy_submission_lblDateCreated = Erstellungsdatum
 
@@ -2120,6 +2137,8 @@ import_workspace_delete_items = L\u00F6schen
 
 import_workspace_details = Details
 
+import_workspace_detailsView = Details anzeigen
+
 import_workspace_enddate = Abgeschlossen
 
 import_workspace_format = Format
@@ -2149,7 +2168,7 @@ item_abstract = Zusammenfassung
 
 item_basic_label = Basisdaten
 
-item_date-accepted = Akzeptierungsdatum
+item_date-accepted = Annahmedatum
 
 item_date-created = Erstellungsdatum
 
@@ -2223,7 +2242,7 @@ login_btLogout = Ausloggen
 
 mainMenu_lblBrowse = Navigieren
 
-mainMenu_lblCart = BASKET
+mainMenu_lblCart = ABLAGE
 
 mainMenu_lblMyWorkspace = Deposit
 
@@ -2237,14 +2256,14 @@ mainMenu_lnkBrowseByAffiliation = Organisationen
 
 mainMenu_lnkDepositor = MEINE DATENS\u00C4TZE
 
-mainMenu_lnkEasySubmission = Einfache Eingabe
+mainMenu_lnkEasySubmission = Einfach
 
 mainMenu_lnkHelp = Hilfe
 
 #
 # Main menu
 #
-mainMenu_lnkHome = STARTSEITE
+mainMenu_lnkHome = START
 
 mainMenu_lnkPolicy = Leitlinien&Impressum
 
@@ -2264,7 +2283,7 @@ multipleImport_dont_import_anything = beim Finden von Dubletten nichts importier
 
 multipleImport_dont_import_duplicates = Gefundene Dubletten nicht importieren
 
-multipleImport_getMultipleRecords = Massenimport
+multipleImport_getMultipleRecords = Import
 
 multipleImport_importFormat = Importformat
 
@@ -2304,7 +2323,7 @@ qaws_lblCollectionSelection = Collection
 
 qaws_lblItemStateSelection = Status des Datensatzes
 
-qaws_lblMultipleImportTags = Import
+qaws_lblMultipleImportTags = Import Name
 
 qaws_lblOrgUnitSelection = Organisation
 
@@ -2416,15 +2435,15 @@ submission_lblMoreDetails = (mehr)
 
 submission_lblSubmissionStart = Eingabemethode
 
-submission_lnkEasySubmission = Einfache Eingabe
+submission_lnkEasySubmission = Einfach
 
 submission_lnkImport = Importieren
 
 submission_lnkImportWorkspace = Import Bereich
 
-submission_lnkMultipleImport = Massenimport
+submission_lnkMultipleImport = Import
 
-submission_lnkNewSubmission = Detaillierte Eingabe
+submission_lnkNewSubmission = Detailliert
 
 test = =
 
