--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -115,19 +115,21 @@ BrowseByChooseInitial = Choose Initial
 
 BrowseByChooseYear = Choose Year
 
-BrowseByCreator = Browse By Creator
+BrowseByCreator = Persons
 
-BrowseByCreatorDesc = Browse by creator names and view the corresponding items.
+BrowseByCreatorDesc = Browse by person names and view the corresponding items.
 
 BrowseByInitial = Initial:
 
+BrowseByOrg = Organizations
+
 BrowseByOrgDesc = Browse by organizational unit names and view the corresponding items.
 
-BrowseByPage = Browse By
+BrowseByPage = Browse
 
 BrowseBySelect = Choose Browse By
 
-BrowseBySubject = Year
+BrowseBySubject = Subjects
 
 BrowseByYear = Browse By Year
 
@@ -345,6 +347,8 @@ ENUM_GENRE_ISSUE = Special Journal Issue
 
 ENUM_GENRE_JOURNAL = Journal
 
+ENUM_GENRE_MANUAL = Manual 
+
 ENUM_GENRE_MANUSCRIPT = Manuscript
 
 #
@@ -378,6 +382,10 @@ ENUM_GENRE_SERIES = Series
 ENUM_GENRE_TALK_AT_EVENT = Talk
 
 ENUM_GENRE_THESIS = Thesis
+
+ENUM_GENRE_WEB_PAGE = Web Page
+
+ENUM_GENRE_WORKING_PAPER = Working Paper 
 
 ENUM_IDENTIFIERTYPE_ = n.a.
 
@@ -566,6 +574,10 @@ EditItem_btUpload = Upload
 
 EditItem_btUploadLocator = Upload linked file
 
+EditItem_btUpload_File = Upload File
+
+EditItem_btUpload_URL = Upload from URL
+
 EditItem_btnAddAuthors = Add authors
 
 EditItem_btnAddAuthorsOverwrite = Overwrite old
@@ -636,6 +648,8 @@ EditItem_lblFileEmbargo = embargoed till
 
 EditItem_lblFileProperties = Properties
 
+EditItem_lblFileURL = File URL
+
 EditItem_lblGenre = Genre
 
 EditItem_lblIssue = Issue
@@ -702,9 +716,11 @@ EditItem_lnkSave = Save
 
 EditItem_lnkSaveAndSubmit = Submit
 
+EditItem_lnkSaveURL = Save URL
+
 EditItem_lnkValidate = Validate
 
-EditItem_localPath = Local Path
+EditItem_localPath = Local File Path
 
 ErrorPage = Error
 
@@ -772,7 +788,7 @@ Feed_Recent_Releases = Recent Releases
 #
 # Orientierungstexts (Sub-Header)
 #
-HomePage = Home
+HomePage = Start
 
 Home_Header_About = About
 
@@ -878,7 +894,7 @@ LoginErrorPage = Login state
 
 MultipleImportForm = Import Parameters
 
-NewMultipleImport = Multiple Import
+NewMultipleImport = Import
 
 NoSearchResultListPage = No Search Results
 
@@ -977,9 +993,11 @@ ViewItemFull_btnFileSection = Files
 
 ViewItemFull_btnItemRevisions = Revisions
 
-ViewItemFull_btnItemStatistics = Item Statistics
+ViewItemFull_btnItemStatistics = Statistics
 
 ViewItemFull_btnItemVersions = Release History
+
+ViewItemFull_btnItemView = View
 
 ViewItemFull_lblAbstract = Abstract
 
@@ -1208,9 +1226,9 @@ ViewItemFull_lblnameOfCollection = Name of Collection
 #
 #ViewItemLog
 #
-ViewItemLogPage = Item Log
+ViewItemLogPage = Log
 
-ViewItemLog_Header = Item Log 
+ViewItemLog_Header = Log 
 
 ViewItemLog_lblComment = Description:
 
@@ -1303,7 +1321,7 @@ ViewItemMedium_lblSubHeaderFile = Files
 
 ViewItemMedium_lblSubHeaderSource = Sources
 
-ViewItemPage = View item
+ViewItemPage = Item
 
 ViewItemReleaseHistoryPage = View Releases
 
@@ -1326,12 +1344,12 @@ ViewItemReleaseHistory_lblReleaseHistory = Release History
 
 ViewItemReleaseHistory_lblVersion = Version
 
-ViewItemRevisionsPage = View Revisions
+ViewItemRevisionsPage = Revisions
 
 #
 # ViewItem Revisions
 #
-ViewItemRevisions_Header = Item Revisions
+ViewItemRevisions_Header = Revisions
 
 ViewItemRevisions_lblReleaseDate = Released:
 
@@ -1584,7 +1602,7 @@ actionMenu_lnkEditLocalTags = Edit Local Tags
 
 actionMenu_lnkModify = Modify
 
-actionMenu_lnkNewSubmission = Full Submission
+actionMenu_lnkNewSubmission = Full
 
 actionMenu_lnkRelease = Release
 
@@ -1660,17 +1678,25 @@ adv_search_lbHeaderWoP = Word or Phrase
 #Genre
 adv_search_lblChkGenre = Genres
 
+adv_search_lblChkGenre_abb_casenote = Case Note
+
+adv_search_lblChkGenre_abb_contrcolled = Contr. to Collect...
+
+adv_search_lblChkGenre_abb_contrcommentary = Contr. to Comment...
+
+adv_search_lblChkGenre_abb_contrfestschrift = Contr. to Fest...
+
+adv_search_lblChkGenre_abb_contrlexikon = Contr. to Encycl...
+
 adv_search_lblChkGenre_article = Journal Article
 
 adv_search_lblChkGenre_book = Book
 
-adv_search_lblChkGenre_bookreview = Book Review
-
 adv_search_lblChkGenre_bookitem = Book Chapter
 
-adv_search_lblChkGenre_casenote = Case Note
+adv_search_lblChkGenre_bookreview = Book Review
 
-adv_search_lblChkGenre_abb_casenote = Case Note
+adv_search_lblChkGenre_casenote = Case Note
 
 adv_search_lblChkGenre_casestudy = Case Study
 
@@ -1682,23 +1708,15 @@ adv_search_lblChkGenre_conferencepap = Conference Paper
 
 adv_search_lblChkGenre_conferencerep = Conference Report
 
-adv_search_lblChkGenre_contrcolled =  Contr. to Collected Edition 
-
-adv_search_lblChkGenre_abb_contrcolled =  Contr. to Collect...
+adv_search_lblChkGenre_contrcolled = Contr. to Collected Edition 
 
 adv_search_lblChkGenre_contrcommentary = Contr. to Commentary 
 
-adv_search_lblChkGenre_abb_contrcommentary = Contr. to Comment...
-
-adv_search_lblChkGenre_contrlexikon = Contr. to Encyclopedia 
-
-adv_search_lblChkGenre_abb_contrlexikon = Contr. to Encycl...
-
 adv_search_lblChkGenre_contrfestschrift = Contr. to Festschrift 
 
-adv_search_lblChkGenre_abb_contrfestschrift = Contr. to Fest...
-
 adv_search_lblChkGenre_contrhandbook = Contr. to Handbook 
+
+adv_search_lblChkGenre_contrlexikon = Contr. to Encyclopedia 
 
 adv_search_lblChkGenre_courseware = Teaching
 
@@ -1733,8 +1751,6 @@ adv_search_lblChkGenre_series = Series
 adv_search_lblChkGenre_talkatevent = Talk
 
 adv_search_lblChkGenre_thesis = Thesis
-
-
 
 adv_search_lblChkInclude = Include Files
 
@@ -2123,6 +2139,8 @@ import_workspace_delete_items = Delete
 
 import_workspace_details = Details
 
+import_workspace_detailsView = View details
+
 import_workspace_enddate = Finished
 
 import_workspace_format = Format
@@ -2240,14 +2258,14 @@ mainMenu_lnkBrowseByAffiliation = Organizations
 
 mainMenu_lnkDepositor = MY ITEMS
 
-mainMenu_lnkEasySubmission = Easy Submission
+mainMenu_lnkEasySubmission = Easy
 
 mainMenu_lnkHelp = Help
 
 #
 # Main menu
 #
-mainMenu_lnkHome = HOME
+mainMenu_lnkHome = START
 
 mainMenu_lnkPolicy = Policy&Disclaimer
 
@@ -2267,7 +2285,7 @@ multipleImport_dont_import_anything = If duplicates are detected, don't import a
 
 multipleImport_dont_import_duplicates = Don't import duplicate publications
 
-multipleImport_getMultipleRecords = Import Multiple Items
+multipleImport_getMultipleRecords = Import
 
 multipleImport_importFormat = Import format
 
@@ -2307,7 +2325,7 @@ qaws_lblCollectionSelection = Collection
 
 qaws_lblItemStateSelection = Item State
 
-qaws_lblMultipleImportTags = Import Multiple Items
+qaws_lblMultipleImportTags = Import Name
 
 qaws_lblOrgUnitSelection = Organizational Unit
 
@@ -2419,15 +2437,15 @@ submission_lblMoreDetails = (more)
 
 submission_lblSubmissionStart = Submission Method
 
-submission_lnkEasySubmission = Easy Submission
+submission_lnkEasySubmission = Easy
 
 submission_lnkImport = Import
 
 submission_lnkImportWorkspace = Import Workspace
 
-submission_lnkMultipleImport = Import Multiple Items
+submission_lnkMultipleImport = Import
 
-submission_lnkNewSubmission = Full Submission
+submission_lnkNewSubmission = Full
 
 #
 # Title
@@ -2440,7 +2458,7 @@ userID = Username
 
 userPW = Password
 
-viewItemFullPage = View Item
+viewItemFullPage = View item
 
 warning_lblMessageHeader = System Messages and Warnings:
 
