--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -115,19 +115,21 @@ BrowseByChooseInitial = Choose Initial
 
 BrowseByChooseYear = Choose Year
 
-BrowseByCreator = Browse By Creator
+BrowseByCreator = Persons
 
-BrowseByCreatorDesc = Browse by creator names and view the corresponding items.
+BrowseByCreatorDesc = Browse by person names and view the corresponding items.
 
 BrowseByInitial = Initial:
 
+BrowseByOrg = Organizations
+
 BrowseByOrgDesc = Browse by organizational unit names and view the corresponding items.
 
-BrowseByPage = Browse By
+BrowseByPage = Browse
 
 BrowseBySelect = Choose Browse By
 
-BrowseBySubject = Year
+BrowseBySubject = Subjects
 
 BrowseByYear = Browse By Year
 
@@ -333,6 +335,8 @@ ENUM_GENRE_ISSUE = \u7279\u96C6\u53F7
 
 ENUM_GENRE_JOURNAL = \u5B66\u8853\u96D1\u8A8C
 
+ENUM_GENRE_MANUAL = Manual 
+
 ENUM_GENRE_MANUSCRIPT = \u8349\u7A3F
 
 ENUM_GENRE_MONOGRAPH = Monograph
@@ -360,6 +364,10 @@ ENUM_GENRE_SERIES = \u9023\u8F09\u8A18\u4E8B
 ENUM_GENRE_TALK_AT_EVENT = \u8B1B\u6F14
 
 ENUM_GENRE_THESIS = \u5B66\u4F4D\u8AD6\u6587
+
+ENUM_GENRE_WEB_PAGE = Web Page
+
+ENUM_GENRE_WORKING_PAPER\  = Working Paper 
 
 ENUM_IDENTIFIERTYPE_ = n.a.
 
@@ -547,6 +555,10 @@ EditItem_btUpload = \u30A2\u30C3\u30D7\u30ED\u30FC\u30C9
 
 EditItem_btUploadLocator = \u30D5\u30A1\u30A4\u30EB\u3068\u3057\u3066\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9
 
+EditItem_btUpload_File = Upload File
+
+EditItem_btUpload_URL = Upload from URL
+
 EditItem_btnAddAuthors = \u8457\u8005\u60C5\u5831\u3092\u8FFD\u52A0\u3059\u308B
 
 EditItem_btnAddAuthorsOverwrite = \u8457\u8005\u60C5\u5831\u3092\u8FFD\u52A0\u3059\u308B\uFF08\u73FE\u5728\u306E\u5185\u5BB9\u306B\u4E0A\u66F8\u304D\uFF09
@@ -617,6 +629,8 @@ EditItem_lblFileEmbargo = \u516C\u958B\u7336\u4E88\u671F\u9650
 
 EditItem_lblFileProperties = \u30D5\u30A1\u30A4\u30EB\u5C5E\u6027
 
+EditItem_lblFileURL = File URL
+
 EditItem_lblGenre = \u8CC7\u6599\u7A2E\u5225
 
 EditItem_lblIssue = \u53F7
@@ -682,6 +696,8 @@ EditItem_lnkDelete = \u524A\u9664
 EditItem_lnkSave = \u4FDD\u5B58
 
 EditItem_lnkSaveAndSubmit = \u767B\u9332
+
+EditItem_lnkSaveURL = Save URL
 
 EditItem_lnkValidate = \u5165\u529B\u5185\u5BB9\u30C1\u30A7\u30C3\u30AF
 
@@ -960,6 +976,8 @@ ViewItemFull_btnItemRevisions = \u6539\u8A02\u7248\u3092\u8868\u793A
 ViewItemFull_btnItemStatistics = \u5229\u7528\u7D71\u8A08\u3092\u8868\u793A
 
 ViewItemFull_btnItemVersions = \u30EA\u30EA\u30FC\u30B9\u5C65\u6B74\u3092\u8868\u793A
+
+ViewItemFull_btnItemView = \u8A73\u7D30
 
 ViewItemFull_lblAbstract = \u8981\u65E8
 
@@ -1637,6 +1655,16 @@ adv_search_lbHeaderWoP = \u691C\u7D22\u8A9E\u53E5
 #Genre
 adv_search_lblChkGenre = \u8CC7\u6599\u7A2E\u5225
 
+adv_search_lblChkGenre_abb_casenote = Case Note
+
+adv_search_lblChkGenre_abb_contrcolled = Contr. to Collect...
+
+adv_search_lblChkGenre_abb_contrcommentary = Contr. to Comment...
+
+adv_search_lblChkGenre_abb_contrfestschrift = Contr. to Fest...
+
+adv_search_lblChkGenre_abb_contrlexikon = Contr. to Encycl...
+
 adv_search_lblChkGenre_article = \u5B66\u8853\u8AD6\u6587
 
 adv_search_lblChkGenre_book = \u66F8\u7C4D
@@ -1646,8 +1674,6 @@ adv_search_lblChkGenre_bookitem = \u66F8\u7C4D\u306E\u4E00\u90E8
 adv_search_lblChkGenre_bookreview = Book Review
 
 adv_search_lblChkGenre_casenote = Case Note
-
-adv_search_lblChkGenre_abb_casenote = Case Note
 
 adv_search_lblChkGenre_casestudy = Case Study
 
@@ -1659,23 +1685,15 @@ adv_search_lblChkGenre_conferencepap = \u4F1A\u8B70\u8AD6\u6587
 
 adv_search_lblChkGenre_conferencerep = \u4F1A\u8B70\u5831\u544A
 
-adv_search_lblChkGenre_contrcolled =  Contribution to a Collected Edition 
-
-adv_search_lblChkGenre_abb_contrcolled =  Contr. to Collect...
+adv_search_lblChkGenre_contrcolled = Contribution to a Collected Edition 
 
 adv_search_lblChkGenre_contrcommentary = Contribution to a Commentary 
 
-adv_search_lblChkGenre_abb_contrcommentary = Contr. to Comment...
-
-adv_search_lblChkGenre_contrlexikon = Contribution to an Encyclopedia 
-
-adv_search_lblChkGenre_abb_contrlexikon = Contr. to Encycl...
-
 adv_search_lblChkGenre_contrfestschrift = Contribution to a Festschrift
 
-adv_search_lblChkGenre_abb_contrfestschrift = Contr. to Fest...
-
 adv_search_lblChkGenre_contrhandbook = Contribution to a Handbook 
+
+adv_search_lblChkGenre_contrlexikon = Contribution to an Encyclopedia 
 
 adv_search_lblChkGenre_courseware = \u6559\u6750
 
@@ -2089,6 +2107,8 @@ import_workspace_delete_items = \u30A2\u30A4\u30C6\u30E0\u3092\u3059\u3079\u3066
 
 import_workspace_details = \u8A73\u7D30
 
+import_workspace_detailsView = View details
+
 import_workspace_enddate = \u7D42\u4E86
 
 import_workspace_format = \u5F62\u5F0F
@@ -2403,7 +2423,7 @@ userID = \u30E6\u30FC\u30B6\u540D
 
 userPW = \u30D1\u30B9\u30EF\u30FC\u30C9
 
-viewItemFullPage = \u8A73\u7D30
+viewItemFullPage = View item
 
 warning_lblMessageHeader = \u30B7\u30B9\u30C6\u30E0\u30E1\u30C3\u30BB\u30FC\u30B8 / \u8B66\u544A:
 
