added proposals from pubman wording page

--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -71,13 +71,13 @@ BreadCrumb_info = Aktionen:
 
 Breadcrumb_action = f\u00FChre Standardaktion aus
 
-BrowseBy = Browse By.
-
 #
 # Header
 #
 # Breadcrumb
 Breadcrumb_itemPage = Gehe zur Datensatz-Seite
+
+BrowseBy = Browse.
 
 CreateItemPage = Neuen Datensatz erstellen
 
@@ -649,7 +649,7 @@ Export_FileFormat_RTF = RTF
 #
 # Orientierungstexts (Sub-Header)
 #
-HomePage = Startseite
+HomePage = Start
 
 Home_Header_About = \u00DCber PubMan
 
