--- a/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -71,13 +71,13 @@ BreadCrumb_info = Actions:
 
 Breadcrumb_action = execute default action
 
-BrowseBy = Browse By.
-
 #
 # Header
 #
 # Breadcrumb
 Breadcrumb_itemPage = Go to Item Page
+
+BrowseBy = Browse.
 
 CreateItemPage = Create new item
 
@@ -650,7 +650,7 @@ Export_FileFormat_RTF = RTF
 #
 # Orientierungstexts (Sub-Header)
 #
-HomePage = Home
+HomePage = Start
 
 Home_Header_About = About PubMan
 
