--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -154,24 +154,24 @@ ViewItemFull_withdrawn = Dieser Datensatz wurde zur\u00FCckgezogen!
 #
 ViewItem_deleteConfirmation = Wollen Sie den Datensatz wirklich l\u00F6schen?
 
-basket_ItemsChanged = Datens\u00E4tze haben ihren Status so ver\u00E4ndert dass Sie nicht mehr befugt sind die aktuellste Version zu sehen. Diese Datens\u00E4tze wurden vor\u00FCbergehend aus dem Basket entfernt bis sie wieder zur Verf\u00FCgung stehen.
+basket_ItemsChanged = Datens\u00E4tze haben ihren Status so ver\u00E4ndert dass Sie nicht mehr befugt sind die aktuellste Version zu sehen. Diese Datens\u00E4tze wurden vor\u00FCbergehend aus der Ablage entfernt bis sie wieder zur Verf\u00FCgung stehen.
 
 #
 #Basket
 #
-basket_MultipleAddedSuccessfully = $1 Datens\u00E4tze wurden in den Basket gelegt.
+basket_MultipleAddedSuccessfully = $1 Datens\u00E4tze wurden in die Ablage gelegt.
 
-basket_MultipleAlreadyInBasket = $1 die selektierten Datens\u00E4tze sind bereits im Basket.
+basket_MultipleAlreadyInBasket = $1 die selektierten Datens\u00E4tze sind bereits in der Ablage.
 
-basket_NoItems = Der Basket ist leer.
+basket_NoItems = Die Ablage ist leer.
 
-basket_NoItemsSelected = Bitte w\u00E4hlen Sie zuerst die Datens\u00E4tze aus, die Sie in den Basket legen wollen.
+basket_NoItemsSelected = Bitte w\u00E4hlen Sie zuerst die Datens\u00E4tze aus, die Sie in die Ablage legen wollen.
 
-basket_SingleAddedSuccessfully = Der Datensatz wurde zum Basket hinzugef\u00FCgt.
+basket_SingleAddedSuccessfully = Der Datensatz wurde zur Ablage hinzugef\u00FCgt.
 
-basket_SingleAlreadyInBasket = Der Datensatz ist bereits im Basket.
+basket_SingleAlreadyInBasket = Der Datensatz ist bereits in der Ablage.
 
-basket_SingleRemovedSuccessfully = Der Datensatz wurde aus dem Basket entfernt.
+basket_SingleRemovedSuccessfully = Der Datensatz wurde aus der Ablage entfernt.
 
 copyright = \u00A9 2007 Max Planck Gesellschaft
 
