--- a/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -71,13 +71,13 @@ BreadCrumb_info = Actions:
 
 Breadcrumb_action = execute default action
 
-BrowseBy = Browse By.
-
 #
 # Header
 #
 # Breadcrumb
 Breadcrumb_itemPage = Go to Item Page
+
+BrowseBy = Browse.
 
 CreateItemPage = \u65B0\u898F\u30A2\u30A4\u30C6\u30E0\u3092\u4F5C\u6210
 
