added proposals from pubman wording page

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -805,6 +805,10 @@ Home_Header_News = Aktuelles von PubMan
 
 Home_Header_News_Disabled = Keine Produktionsumgebung daher News deaktiviert
 
+Home_Link_EasySub = Einfache Eingabe
+
+Home_Link_FullSub = Detaillierte Eingabe
+
 #
 # HomePage
 #
