--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -804,6 +804,10 @@ Home_Header_News = Latest News on PubMan
 
 Home_Header_News_Disabled = News disabled due to non-productive environment
 
+Home_Link_EasySub = Easy Submission
+
+Home_Link_FullSub = Full Submission
+
 #
 # HomePage
 #
