--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -784,6 +784,10 @@ Home_Header_News = \u958B\u767A\u30C1\u30FC\u30E0\u304B\u3089\u306E\u304A\u77E5\
 
 Home_Header_News_Disabled = \u304A\u77E5\u3089\u305B\u8868\u793A\u306F\u3053\u306E\u30B5\u30FC\u30D0\u3067\u306F\u7121\u52B9\u8A2D\u5B9A\u3055\u308C\u3066\u3044\u307E\u3059\u3002
 
+Home_Link_EasySub = Easy Submission
+
+Home_Link_FullSub = Full Submission
+
 #
 # HomePage
 #
