added proposals from pubman wording page

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1900,6 +1900,8 @@ easy_submission_btnBack = Zur\u00FCck
 
 easy_submission_btnCancel = Abbrechen
 
+easy_submission_btnFetch = Abholen
+
 easy_submission_btnImport = Importieren
 
 easy_submission_btnLocatorAdd = Neue externe Referenz hinzuf\u00FCgen
@@ -1921,6 +1923,8 @@ easy_submission_btnRemoveFile = Entfernen
 easy_submission_btnRemoveOrg = Organisation entfernen
 
 easy_submission_btnSave = Speichern
+
+easy_submission_btnUpload = Hochladen
 
 easy_submission_btnUploadFile = Datei hochladen
 
