--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1899,6 +1899,8 @@ easy_submission_btnBack = Back
 
 easy_submission_btnCancel = Cancel
 
+easy_submission_btnFetch = Fetch
+
 easy_submission_btnImport = Import
 
 easy_submission_btnLocatorAdd = Add New Locator
@@ -1920,6 +1922,8 @@ easy_submission_btnRemoveFile = Remove
 easy_submission_btnRemoveOrg = Remove Organization
 
 easy_submission_btnSave = Save
+
+easy_submission_btnUpload = Upload
 
 easy_submission_btnUploadFile = Upload File
 
