--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1876,6 +1876,8 @@ easy_submission_btnBack = \u623B\u308B
 
 easy_submission_btnCancel = \u30AD\u30E3\u30F3\u30BB\u30EB
 
+easy_submission_btnFetch = Fetch
+
 easy_submission_btnImport = \u30A4\u30F3\u30DD\u30FC\u30C8\u3059\u308B
 
 easy_submission_btnLocatorAdd = \u65B0\u3057\u3044\u95A2\u9023URL\u3092\u8FFD\u52A0\u3059\u308B
@@ -1897,6 +1899,8 @@ easy_submission_btnRemoveFile = \u524A\u9664
 easy_submission_btnRemoveOrg = \u6240\u5C5E\u60C5\u5831\u3092\u524A\u9664\u3059\u308B
 
 easy_submission_btnSave = \u767B\u9332
+
+easy_submission_btnUpload = Upload
 
 easy_submission_btnUploadFile = \u30D5\u30A1\u30A4\u30EB\u3092\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9\u3059\u308B
 
