--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -373,7 +373,7 @@ import_process_initialize_submit_process_error = Die Initislisierung des Einstel
 
 import_process_inputstream_available = Import-Datenstrom gefunden
 
-import_process_inputstream_unavailable = Iimport-Datenstrom nicht gefunden gefunden
+import_process_inputstream_unavailable = Import-Datenstrom nicht gefunden gefunden
 
 import_process_item_error = Fehler beim Importieren des Items
 
