added proposals from pubman wording page

--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -692,7 +692,7 @@ List_ShortView = Kurzansicht
 
 List_btGo = Gehe zur ausgew\u00E4hlten Seite
 
-List_lblAddToBasket = Zum Basket hinzuf\uFFFDgen
+List_lblAddToBasket = Zur Ablage hinzuf\uFFFDgen
 
 List_lblBibList = Bibliographische Liste
 
@@ -751,7 +751,7 @@ Login_login_logout = Login/Logout
 
 MainMenu_QAWSPage = Gehe zur QA Arbeitsplatz Seite.
 
-MainMenu_cartItemsPage = Gehe zur Basket Seite.
+MainMenu_cartItemsPage = Gehe zur Ablage.
 
 MainMenu_depWorkspace = Gehe zum Depositor Arbeitsplatz.
 
