--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -539,8 +539,6 @@ EasySubmission_lblImportMetadata = Import
 
 EditItemPage = Edit item
 
-EditItem_FilePreview = File Preview
-
 #
 # EditItem (Combo Boxes)
 #
@@ -550,10 +548,6 @@ EditItem_btAdd = add
 
 EditItem_btAddFile = Add New File
 
-EditItem_btAddFileLoc = Add New Locator
-
-EditItem_btAddSource = Add Source
-
 EditItem_btAddTitle = Add Alternative Title
 
 EditItem_btChangeCollection = change collection
@@ -562,19 +556,13 @@ EditItem_btChooseFile = Choose file
 
 EditItem_btRemove = remove
 
-EditItem_btRemoveFile = Remove File
-
-EditItem_btRemoveFileLoc = Remove File Locator
-
-EditItem_btRemoveSource = Remove Source
-
 EditItem_btSelect = select
 
 EditItem_btUpload = Upload
 
 EditItem_btUploadLocator = Upload linked file
 
-EditItem_btUpload_File = Upload File
+EditItem_btUpload_File = Upload file
 
 EditItem_btUpload_URL = Upload from URL
 
@@ -642,7 +630,7 @@ EditItem_lblEdition = Edition
 
 EditItem_lblEndpage = Endpage
 
-EditItem_lblFile = Save File
+EditItem_lblFile = Save file
 
 EditItem_lblFileEmbargo = embargoed till
 
@@ -1409,10 +1397,6 @@ ViewItem_btnBackToList1 = |<< back to list
 
 ViewItem_btnDownload = Download...
 
-ViewItem_btnNextItem1 = > next item
-
-ViewItem_btnPreviousItem1 = < previous item
-
 ViewItem_lblAbstract1 = Abstract:
 
 ViewItem_lblAffiliatedOrganization1 = Affiliated organization:
@@ -1462,8 +1446,6 @@ ViewItem_lblFile2 = File:
 ViewItem_lblFileCitation = Cite this file as: 
 
 ViewItem_lblFileDescription = Description: 
-
-ViewItem_lblFileVisibility = access-level: 
 
 ViewItem_lblGenre1 = Genre:
 
@@ -1887,13 +1869,7 @@ depositorWS_lblItemstate = Item state
 
 depositorWS_lblSortBy = Sort by
 
-easy_submission_btnAddCreator = Add Creator Persons/Organizations
-
 easy_submission_btnAddDetails = add more details now
-
-easy_submission_btnAddFile = Add New File
-
-easy_submission_btnAddMoreOrgs = Add more Organizations
 
 easy_submission_btnBack = Back
 
@@ -1902,8 +1878,6 @@ easy_submission_btnCancel = Cancel
 easy_submission_btnFetch = Fetch
 
 easy_submission_btnImport = Import
-
-easy_submission_btnLocatorAdd = Add New Locator
 
 easy_submission_btnLocatorRemove = Remove
 
@@ -1915,17 +1889,13 @@ easy_submission_btnOrgSelect = Select
 
 easy_submission_btnPreview = Preview
 
-easy_submission_btnRemoveCreator = Remove Creator
-
 easy_submission_btnRemoveFile = Remove
-
-easy_submission_btnRemoveOrg = Remove Organization
 
 easy_submission_btnSave = Save
 
 easy_submission_btnUpload = Upload
 
-easy_submission_btnUploadFile = Upload File
+easy_submission_btnUploadFile = Upload file
 
 easy_submission_lblAbstract = Abstract
 
