--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -367,7 +367,7 @@ ENUM_GENRE_THESIS = \u5B66\u4F4D\u8AD6\u6587
 
 ENUM_GENRE_WEB_PAGE = Web Page
 
-ENUM_GENRE_WORKING_PAPER\  = Working Paper 
+ENUM_GENRE_WORKING_PAPER = Working Paper 
 
 ENUM_IDENTIFIERTYPE_ = n.a.
 
@@ -520,8 +520,6 @@ EasySubmission_lblImportMetadata = \u30A4\u30F3\u30DD\u30FC\u30C8
 
 EditItemPage = \u30A2\u30A4\u30C6\u30E0\u7DE8\u96C6
 
-EditItem_FilePreview = \u30D5\u30A1\u30A4\u30EB\u30D7\u30EC\u30D3\u30E5\u30FC
-
 #
 # EditItem (Combo Boxes)
 #
@@ -531,10 +529,6 @@ EditItem_btAdd = \u8FFD\u52A0
 
 EditItem_btAddFile = \u65B0\u3057\u3044\u30D5\u30A1\u30A4\u30EB\u3092\u8FFD\u52A0\u3059\u308B
 
-EditItem_btAddFileLoc = \u95A2\u9023URL\u3092\u8FFD\u52A0\u3059\u308B
-
-EditItem_btAddSource = \u51FA\u7248\u7269\u3092\u8FFD\u52A0\u3059\u308B
-
 EditItem_btAddTitle = \u5225\u30BF\u30A4\u30C8\u30EB\u3092\u8FFD\u52A0
 
 EditItem_btChangeCollection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u3092\u5909\u66F4\u3059\u308B
@@ -542,12 +536,6 @@ EditItem_btChangeCollection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u3092\u5909\u
 EditItem_btChooseFile = \u30D5\u30A1\u30A4\u30EB\u3092\u9078\u629E\u3059\u308B
 
 EditItem_btRemove = \u524A\u9664
-
-EditItem_btRemoveFile = \u30D5\u30A1\u30A4\u30EB\u3092\u524A\u9664\u3059\u308B
-
-EditItem_btRemoveFileLoc = \u95A2\u9023URL\u3092\u524A\u9664\u3059\u308B
-
-EditItem_btRemoveSource = \u51FA\u7248\u7269\u3092\u524A\u9664\u3059\u308B
 
 EditItem_btSelect = \u9078\u629E
 
@@ -1386,10 +1374,6 @@ ViewItem_btnBackToList1 = |<< \u4E00\u89A7\u306B\u623B\u308B
 
 ViewItem_btnDownload = \u30C0\u30A6\u30F3\u30ED\u30FC\u30C9...
 
-ViewItem_btnNextItem1 = > \u6B21\u306E\u30A2\u30A4\u30C6\u30E0
-
-ViewItem_btnPreviousItem1 = < \u524D\u306E\u30A2\u30A4\u30C6\u30E0
-
 ViewItem_lblAbstract1 = \u8981\u65E8:
 
 ViewItem_lblAffiliatedOrganization1 = \u6240\u5C5E\u7D44\u7E54:
@@ -1439,8 +1423,6 @@ ViewItem_lblFile2 = \u30D5\u30A1\u30A4\u30EB:
 ViewItem_lblFileCitation = \u5F15\u7528URL: 
 
 ViewItem_lblFileDescription = \u8AAC\u660E: 
-
-ViewItem_lblFileVisibility = \u95B2\u89A7\u5236\u9650: 
 
 ViewItem_lblGenre1 = \u8CC7\u6599\u7A2E\u5225:
 
@@ -1864,13 +1846,7 @@ depositorWS_lblItemstate = \u767B\u9332\u72B6\u6CC1
 
 depositorWS_lblSortBy = \u30BD\u30FC\u30C8\u6761\u4EF6:
 
-easy_submission_btnAddCreator = \u4F5C\u8005\u60C5\u5831\u3092\u8FFD\u52A0\u3059\u308B
-
 easy_submission_btnAddDetails = \u8A73\u7D30\u60C5\u5831\u3092\u4ECA\u3059\u3050\u8FFD\u52A0\u3059\u308B
-
-easy_submission_btnAddFile = \u65B0\u3057\u3044\u30D5\u30A1\u30A4\u30EB\u3092\u8FFD\u52A0\u3059\u308B
-
-easy_submission_btnAddMoreOrgs = \u65B0\u3057\u3044\u6240\u5C5E\u60C5\u5831\u3092\u8FFD\u52A0\u3059\u308B
 
 easy_submission_btnBack = \u623B\u308B
 
@@ -1879,8 +1855,6 @@ easy_submission_btnCancel = \u30AD\u30E3\u30F3\u30BB\u30EB
 easy_submission_btnFetch = Fetch
 
 easy_submission_btnImport = \u30A4\u30F3\u30DD\u30FC\u30C8\u3059\u308B
-
-easy_submission_btnLocatorAdd = \u65B0\u3057\u3044\u95A2\u9023URL\u3092\u8FFD\u52A0\u3059\u308B
 
 easy_submission_btnLocatorRemove = \u524A\u9664
 
@@ -1892,11 +1866,7 @@ easy_submission_btnOrgSelect = \u9078\u629E
 
 easy_submission_btnPreview = \u30D7\u30EC\u30D3\u30E5\u30FC
 
-easy_submission_btnRemoveCreator = \u4F5C\u8005\u60C5\u5831\u3092\u524A\u9664\u3059\u308B
-
 easy_submission_btnRemoveFile = \u524A\u9664
-
-easy_submission_btnRemoveOrg = \u6240\u5C5E\u60C5\u5831\u3092\u524A\u9664\u3059\u308B
 
 easy_submission_btnSave = \u767B\u9332
 
