--- a/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -1442,19 +1442,49 @@ adv_search_lblChkGenre_article = Journal Article
 
 adv_search_lblChkGenre_book = Book
 
+adv_search_lblChkGenre_bookreview = Book Review
+
 adv_search_lblChkGenre_bookitem = Book Chapter
 
-adv_search_lblChkGenre_conferencepap = Proceedings Paper
+adv_search_lblChkGenre_casenote = Case Note
+
+adv_search_lblChkGenre_casestudy = Case Study
+
+adv_search_lblChkGenre_colled = Collected Edition
+
+adv_search_lblChkGenre_commentary = Commentary
+
+adv_search_lblChkGenre_conferencepap = Conference Paper
 
 adv_search_lblChkGenre_conferencerep = Conference Report
 
+adv_search_lblChkGenre_contrcolled =  Contr. to Collected Edition 
+
+adv_search_lblChkGenre_contrcommentary = Contr. to Commentary 
+
+adv_search_lblChkGenre_contrlexikon = Contr. to Encyclopedia 
+
+adv_search_lblChkGenre_contrfestschrift = Contr. to Festschrift 
+
+adv_search_lblChkGenre_contrhandbook = Contr. to Handbook 
+
 adv_search_lblChkGenre_courseware = Teaching
 
-adv_search_lblChkGenre_issue = Special Issue
+adv_search_lblChkGenre_editorial = Editorial
+
+adv_search_lblChkGenre_festschrift = Festschrift
+
+adv_search_lblChkGenre_issue = Special Journal Issue
 
 adv_search_lblChkGenre_journal = Journal
 
 adv_search_lblChkGenre_manuscript = Manuscript
+
+adv_search_lblChkGenre_monogaph = Monograph
+
+adv_search_lblChkGenre_newspaperarticle = Newspaper Article
+
+adv_search_lblChkGenre_opinion = Opinion
 
 adv_search_lblChkGenre_other = Other
 
@@ -1471,6 +1501,7 @@ adv_search_lblChkGenre_series = Series
 adv_search_lblChkGenre_talkatevent = Talk
 
 adv_search_lblChkGenre_thesis = Thesis
+
 
 adv_search_lblChkInclude = Include Files
 
