--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -313,39 +313,39 @@ ENUM_GENRE_CONFERENCE_REPORT = \u4F1A\u8B70\u5831\u544A\u66F8
 
 ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Contribution to a Collected Edition 
 
-ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Contribution to a Commentary \u0009
+ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Contribution to a Commentary
 
-ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Contribution to an Encyclopedia 
+ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Contribution to an Encyclopedia
 
-ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Contribution to a Festschrift 
+ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Contribution to a Festschrift
 
-ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Contribution to a Handbook 
+ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Contribution to a Handbook
 
 ENUM_GENRE_COURSEWARE_LECTURE = \u6559\u6750
 
 ENUM_GENRE_EDITORIAL = Editorial
 
-ENUM_GENRE_ENCYCLOPEDIA = Encyclopedia 
+ENUM_GENRE_ENCYCLOPEDIA = Encyclopedia
 
 ENUM_GENRE_FESTSCHRIFT = Festschrift
 
-ENUM_GENRE_HANDBOOK = Handbook 
+ENUM_GENRE_HANDBOOK = Handbook
 
 ENUM_GENRE_ISSUE = \u7279\u96C6\u53F7
 
 ENUM_GENRE_JOURNAL = \u5B66\u8853\u96D1\u8A8C
 
-ENUM_GENRE_MANUAL = Manual 
+ENUM_GENRE_MANUAL = Manual
 
 ENUM_GENRE_MANUSCRIPT = \u8349\u7A3F
 
 ENUM_GENRE_MONOGRAPH = Monograph
 
-ENUM_GENRE_MULTI_VOLUME = Multi-Volume 
+ENUM_GENRE_MULTI_VOLUME = Multi-Volume
 
 ENUM_GENRE_NEWSPAPER = Newspaper
 
-ENUM_GENRE_NEWSPAPER_ARTICLE = Newspaper Article 
+ENUM_GENRE_NEWSPAPER_ARTICLE = Newspaper Article
 
 ENUM_GENRE_OPINION = Opinion
 
@@ -367,7 +367,7 @@ ENUM_GENRE_THESIS = \u5B66\u4F4D\u8AD6\u6587
 
 ENUM_GENRE_WEB_PAGE = Web Page
 
-ENUM_GENRE_WORKING_PAPER = Working Paper 
+ENUM_GENRE_WORKING_PAPER = Working Paper
 
 ENUM_IDENTIFIERTYPE_ = n.a.
 
@@ -2251,6 +2251,8 @@ ok = Ok
 openSearch_desc = \u6587\u732E\u60C5\u5831\u3092\u691C\u7D22: 
 
 openSearch_shortDesc = eSciDoc PubMan
+
+organizationNumbers = Org.nr.
 
 organization_name = \u6240\u5C5E\u7D44\u7E54\u304A\u3088\u3073\u4F4F\u6240
 
