--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -137,6 +137,8 @@ StatisticsUpdatedDaily = Hinweis: Statistische Daten werden t\u00E4glich aktuali
 
 TitleNotProvided = Bitte geben Sie einen Titel ein.
 
+UnknownLanguageCode = Der eingegebene Sprachcode existiert nicht in ISO639-3
+
 ViewItemFull_inRevision = Dieser Datensatz ist in \u00DCberarbeitung! Letzte Nachricht:
 
 ViewItemFull_invalidID = Das Item mit dem Identifikator $1 konnte nicht gefunden werden.
