--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -321,16 +321,16 @@ ENUM_GENRE_CONFERENCE_REPORT = Conference report
 ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Contribution to a Collected Edition 
 
 # kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Contribution to a Commentary 
+ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Contribution to a Commentary
 
 # kind of Book, source Encyclopedia
 ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Contribution to an Encyclopedia 
 
 # kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Contribution to a Festschrift 
+ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Contribution to a Festschrift
 
 # kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Contribution to a Handbook 
+ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Contribution to a Handbook
 
 ENUM_GENRE_COURSEWARE_LECTURE = Teaching
 
@@ -347,7 +347,7 @@ ENUM_GENRE_ISSUE = Special Journal Issue
 
 ENUM_GENRE_JOURNAL = Journal
 
-ENUM_GENRE_MANUAL = Manual 
+ENUM_GENRE_MANUAL = Manual
 
 ENUM_GENRE_MANUSCRIPT = Manuscript
 
@@ -356,13 +356,13 @@ ENUM_GENRE_MANUSCRIPT = Manuscript
 #
 ENUM_GENRE_MONOGRAPH = Monograph
 
-ENUM_GENRE_MULTI_VOLUME = Multi-Volume 
+ENUM_GENRE_MULTI_VOLUME = Multi-Volume
 
 ENUM_GENRE_NEWSPAPER = Newspaper
 
 #Jus-specific Publication types BEGIN
 # source Newspaper
-ENUM_GENRE_NEWSPAPER_ARTICLE = Newspaper Article 
+ENUM_GENRE_NEWSPAPER_ARTICLE = Newspaper Article
 
 # kind of Journal Article, source Journal or without source, can be published on a webpage
 ENUM_GENRE_OPINION = Opinion
@@ -385,7 +385,7 @@ ENUM_GENRE_THESIS = Thesis
 
 ENUM_GENRE_WEB_PAGE = Web Page
 
-ENUM_GENRE_WORKING_PAPER = Working Paper 
+ENUM_GENRE_WORKING_PAPER = Working Paper
 
 ENUM_IDENTIFIERTYPE_ = n.a.
 
@@ -606,7 +606,7 @@ EditItem_lblCreator = Creator
 
 EditItem_lblCreatorOfSource = Creator of Source
 
-EditItem_lblCreatorRole = Creator role
+EditItem_lblCreatorRole = Role
 
 EditItem_lblCreatorType = Type
 
@@ -2101,7 +2101,7 @@ g_legal_case = Legal Case
 
 g_locators = File Locators
 
-g_select_roles = Creator role
+g_select_roles = Role
 
 g_source_basic = Source
 
@@ -2286,6 +2286,8 @@ ok = Ok
 openSearch_desc = Search for publications within
 
 openSearch_shortDesc = eSciDoc PubMan
+
+organizationNumbers = Org.nr.
 
 organization_name = Organization Name and Address
 
