--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -143,6 +143,8 @@ StatisticsUpdatedDaily = Notice: The statistic data is updated on a daily basis.
 
 TitleNotProvided = Title is required.
 
+UnknownLanguageCode = The given language code does not exist in ISO639-3
+
 ViewItemFull_inRevision = This item is in rework! Last message:
 
 ViewItemFull_invalidID = The item with the identifier $1 could not be found.
