--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -123,6 +123,8 @@ StatisticsUpdatedDaily = \ \u6CE8\u610F: \u5229\u7528\u7D71\u8A08\u30C7\u30FC\u3
 
 TitleNotProvided = \u30BF\u30A4\u30C8\u30EB\u60C5\u5831\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
+UnknownLanguageCode = The given language code does not exist in ISO639-3
+
 ViewItemFull_inRevision = This item is in rework! Last message:
 
 ViewItemFull_invalidID = \u8B58\u5225\u5B50$1\u306E\u30A2\u30A4\u30C6\u30E0\u306F\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3067\u3057\u305F\u3002
