--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -534,9 +534,9 @@ EasySubmission = Einfache Eingabe
 
 EasySubmissionPage = Einfache Eingabe
 
-EasySubmission_lblFetchMetadata = Abholen
+EasySubmission_lblFetchMetadata = Abholen/Import
 
-EasySubmission_lblImportMetadata = Importieren
+EasySubmission_lblImportMetadata = Import
 
 EditItemPage = Datensatz bearbeiten
 
@@ -887,7 +887,7 @@ LoginErrorPage = Login Status
 
 MultipleImportForm = Importparameter
 
-NewMultipleImport = Import
+NewMultipleImport = Massenimport
 
 NoSearchResultListPage = keine Treffer
 
@@ -2421,7 +2421,7 @@ submission_lnkImport = Importieren
 
 submission_lnkImportWorkspace = Import Bereich
 
-submission_lnkMultipleImport = Import
+submission_lnkMultipleImport = Massenimport
 
 submission_lnkNewSubmission = Detailliert
 
