--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -533,7 +533,7 @@ EasySubmission = Easy Submission
 
 EasySubmissionPage = Easy Submission
 
-EasySubmission_lblFetchMetadata = Fetch
+EasySubmission_lblFetchMetadata = Fetch/Import
 
 EasySubmission_lblImportMetadata = Import
 
@@ -886,7 +886,7 @@ LoginErrorPage = Login state
 
 MultipleImportForm = Import Parameters
 
-NewMultipleImport = Import
+NewMultipleImport = Multiple Import
 
 NoSearchResultListPage = No Search Results
 
@@ -2423,7 +2423,7 @@ submission_lnkImport = Import
 
 submission_lnkImportWorkspace = Import Workspace
 
-submission_lnkMultipleImport = Import
+submission_lnkMultipleImport = Multiple Import
 
 submission_lnkNewSubmission = Full
 
