DDC and MPI PKS Classification messages

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -83,6 +83,10 @@ IdTypeNotProvided = Bei einem Identifier fehlt der Typ.
 
 IncorrectClassification = Das eingegebene Stichwort entspricht nicht der angegebenen Klassifizierung.
 
+IncorrectDDCClassification = Das eingegebene Stichwort entspricht nicht der DDC-Klassifizierung.
+
+IncorrectMPIPKSClassification = Das eingegebene Stichwort entspricht nicht der MPI PKS-Klassifizierung. 
+
 LocatorIsNoUri = Die externe Referenz ist keine g\u00FCltige URL.
 
 #
