--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -86,6 +86,10 @@ IdTypeNotProvided = An identifier is missing the type.
 
 IncorrectClassification = The entered keyword does not conform to the given classification.
 
+IncorrectDDCClassification = The entered keyword does not conform to the DDC classification. 
+
+IncorrectMPIPKSClassification = The entered keyword does not conform to the MPI PKS classification. 
+
 LocatorIsNoUri = The external reference is no valid URL.
 
 #
