--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -82,6 +82,10 @@ IdTypeNotProvided = An identifier is missing the type.
 
 IncorrectClassification = The entered keyword does not conform to the given classification.
 
+IncorrectDDCClassification = The entered keyword does not conform to the DDC classification. 
+
+IncorrectMPIPKSClassification = The entered keyword does not conform to the MPI PKS classification. 
+
 LocatorIsNoUri = \u6307\u5B9A\u3057\u305F\u5916\u90E8URL\u306E\u6B63\u3057\u3044\u5F62\u5F0F\u3068\u306A\u3063\u3066\u3044\u307E\u305B\u3093\u3002
 
 #
